--- a/.gitignore
+++ b/.gitignore
@@ -208,3 +208,12 @@ __marimo__/
 
 data/
 outputs/
+
+# Data & Models (Never version control these)
+data/
+outputs/
+*.pt
+*.pth
+*.bin
+*.safetensors
+*.ckpt
